--- a/index.html
+++ b/index.html
@@ -9,8 +9,39 @@
   I've collected some of my favorite pictures from around the web on this simple web page.
   <h2>Image Categories</h2>
   <ul>
-    <li>Animals</li>
-    <li>Ships</li>
-    <li>Landscapes</li>
+    <li>
+      <h3>Animals</h3>
+    <img src="animals/mammals/elephant.jpg" alt="an elephant">
+    <img src="animals/mammals/pug_dog.jpg"  alt="a pug dog">
+    <img src="animals/mammals/tabby_cat.jpg" alt="a tabby cat">
+  </li>
+
+    <li><h3>Ships</h3>
+      <ul>
+      <li>Cruise Ships
+        <p>
+        <img src="ships/cruise_ships/carnival_freedom.jpg" alt="The Carnival Freedom">
+        <img src="ships/cruise_ships/queen_mary.jpg" alt="The Queen Mary">
+        <img src="ships/cruise_ships/united_states.jpg" alt="The United States">
+      </p>
+      </li>
+
+      <li>War Ships
+        <p>
+        <img src="ships/warships/diamond.jpg" alt="The Diamond">
+        <img src="ships/warships/intrepid.jpg" alt="The Intrepid">
+        <img src="ships/warships/new_jersey.jpg" alt="The New Jersey">
+        </p>
+      </li>
+      </ul>
+    </li>
+
+
+
+  <li><h3>Landscapes</h3>
+    <img src="landscapes/mountains/camelback.jpg" alt="Camelback Mountain">
+    <img src="landscapes/mountains/mittenwald.jpg" alt="Mittenwald Mountain">
+    <img src="landscapes/mountains/new_zealand.jpg" alt="Mountains in New Zealand">
+  </li>
   </ul>
 </body>
