--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
   <h2>Image Categories</h2>
   <ul>
     <li>Animals</li>
+    <img src="animals/mammals/elephant.jpg" alt="an elephant">
     <li>Ships</li>
     <li>Landscapes</li>
   </ul>
